--- a/MoneyTrace.RestBackend/MoneyTrace.RestBackend.csproj
+++ b/MoneyTrace.RestBackend/MoneyTrace.RestBackend.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.4" />
+    <PackageReference Include="NSwag.AspNetCore" Version="14.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../MoneyTrace.Application/MoneyTrace.Application.csproj" />
+  </ItemGroup>
+
 </Project>
