--- a/src/MoneyTrace.RestBackend/appsettings.Development.json
+++ b/src/MoneyTrace.RestBackend/appsettings.Development.json
@@ -1,8 +1,30 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.EntityFrameworkCore.Update": "Debug"
+      "Override": {
+        "Microsoft": "Information",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Information",
+        "Microsoft.EntityFrameworkCore.Update": "Debug"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs//Serilog..json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }      
+    ],
+    "Properties": {
+      "Application": "MoneyTrace"
     }
   }
 }
