--- a/src/MoneyTrace.RestBackend/appsettings.json
+++ b/src/MoneyTrace.RestBackend/appsettings.json
@@ -1,9 +1,31 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "AllowedHosts": "*",
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "System": "Warning",
+        "Microsoft.EntityFrameworkCore.Update": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs//Serilog..json",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formattting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "MoneyTrace"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
